kubs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: population-analysis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
    spec:
      containers:
      - image: xxxxxxxxxxxxxxx.dkr.ecr.ap-south-1.amazonaws.com/population-analysis:latest
        name: api-container
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 80
status: {}
