kubs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    run: api
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: api
  type: NodePort
